--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,6 @@
 .container {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 100px repeat(1, 1fr);
   text-align: center;
-  gap: 20px;
-}
-
-.nav-container {
-  max-width: 200px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
 }
