--- a/src/style/shop.css
+++ b/src/style/shop.css
@@ -4,7 +4,7 @@ li {
 
 ul {
     display: grid;
-    grid-template-columns: repeat(4, 11rem);
+    grid-template-columns: repeat(4, 13rem);
     justify-content: center;
 
 }
@@ -13,7 +13,7 @@ ul {
     border: 1px solid;
     border-radius: 10px;
     background-color: aliceblue;
-    height: 250px;
+    height: 350px;
     margin: 1rem;
 }
 
@@ -25,4 +25,13 @@ ul {
     display: flex;
     justify-content: center;
     gap: 1rem;
+}
+
+#product-image {
+    padding: 2rem;
+}
+
+img {
+    width: 60px;
+    height: 50px;
 }
