--- a/src/style/cart.css
+++ b/src/style/cart.css
@@ -16,3 +16,8 @@
     padding-bottom: 0.5rem;
     /* Adjust padding as needed */
 }
+
+.checkout-btn {
+    text-decoration: none;
+    color: black;
+}
